--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -1,19 +1,22 @@
-﻿<ctl:OpenableObservableControl
-    x:Class="UniFiler10.Views.SettingsView"
+﻿<ctl:OpenableObservablePage
+    x:Class="UniFiler10.Views.SettingsPage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
 	xmlns:ctl="using:UniFiler10.Controlz"
 	xmlns:utilz="using:Utilz"
+	xmlns:vm="using:UniFiler10.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
     mc:Ignorable="d">
-	<!--DataContextChanged="OnDataContextChanged">-->
 
 	<!--Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"-->
 
-	<Grid x:Name="LayoutRoot" Background="AntiqueWhite">
+	<Grid x:Name="LayoutRoot" 
+		  Background="AntiqueWhite"
+		  d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}"
+		  DataContext="{x:Bind VM, Mode=OneWay}">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
@@ -45,7 +48,7 @@
 			</Button>
 
 			<Button
-				Tapped="OnGoToBinder_Tapped"
+				Tapped="OnGoToBinderCover_Tapped"
 				Style="{StaticResource ButtonLolloStyle}">
 				<Grid>
 					<Grid.ColumnDefinitions>
@@ -68,7 +71,7 @@
 			</Button>
 
 			<ToggleButton 
-                    IsChecked="{Binding ElementName=me, Path=VM.IsElevated, Mode=TwoWay}"
+                    IsChecked="{Binding MetaBriefcase.IsElevated, Mode=TwoWay}"
                     Style="{StaticResource ToggleButtonLolloStyle}"
 					Tapped="OnToggleElevated_Tapped">
 
@@ -85,34 +88,34 @@
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
 							Height="{StaticResource LandscapeItemHeight}"
-                            Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"/>
+                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"/>
 					<SymbolIcon 
                             Symbol="Emoji2" 
 							HorizontalAlignment="Center"
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
 							Height="{StaticResource LandscapeItemHeight}"
-                            Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
+                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
 					<TextBlock Grid.Column="2" 
                             x:Uid="GotoElevated"
 							MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
                             TextWrapping="Wrap"
                             HorizontalAlignment="Left"
 							VerticalAlignment="Center"
-							Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"/>
+							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"/>
 					<TextBlock Grid.Column="2" 
                             x:Uid="GotoSafe"
 							MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
                             TextWrapping="Wrap"
                             HorizontalAlignment="Left"
 							VerticalAlignment="Center"
-							Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
+							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
 				</Grid>
 			</ToggleButton>
 		</VariableSizedWrapGrid>
 
 		<Border Grid.Row="1"
-			Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"
+			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"
 			BorderBrush="{StaticResource FlashyForeground}"
 			BorderThickness="{StaticResource Thickness2222}"
 			Padding="{StaticResource PanelPadding8282}">
@@ -124,7 +127,7 @@
 		</Border>
 
 		<Border Grid.Row="1"
-			Visibility="{Binding ElementName=me, Path=VM.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"
+			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}}"
 			BorderThickness="{StaticResource Thickness2222}"
 			Padding="{StaticResource PanelPadding8282}">
 			<TextBlock x:Uid="SafeMode"
@@ -135,7 +138,8 @@
 
 		<local:MetaBriefcaseView Grid.Row="2"
 			x:Name="MBView"            
-            VM="{x:Bind VM, Mode=OneWay}"/>
+            VM="{x:Bind VM, Mode=OneWay}"
+			IsEnabled="{Binding IsOpen, Mode=OneWay, FallbackValue=False}"/>
 		
 	</Grid>
-</ctl:OpenableObservableControl>
+</ctl:OpenableObservablePage>
