--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -95,7 +95,7 @@
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
 							Height="{StaticResource LandscapeItemHeight}"
-                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
+                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
 					<TextBlock Grid.Column="2" 
                             x:Uid="GotoElevated"
 							MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
@@ -109,13 +109,13 @@
                             TextWrapping="Wrap"
                             HorizontalAlignment="Left"
 							VerticalAlignment="Center"
-							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"/>
+							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
 				</Grid>
 			</ToggleButton>
 		</VariableSizedWrapGrid>
 
 		<Border Grid.Row="1"
-			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}}"
+			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
 			BorderBrush="{StaticResource FlashyForeground}"
 			BorderThickness="{StaticResource Thickness2222}"
 			Padding="{StaticResource PanelPadding8282}">
@@ -139,7 +139,7 @@
 		<local:MetaBriefcaseView Grid.Row="2"
 			x:Name="MBView"            
             VM="{x:Bind VM, Mode=OneWay}"
-			IsEnabled="{Binding IsOpen, Mode=OneWay, FallbackValue=False}"/>
+			IsEnabled="{x:Bind IsOpen, Mode=OneWay, FallbackValue=False}"/>
 		
 	</Grid>
 </ctl:OpenableObservablePage>
