--- a/UniFiler10/Views/BriefcaseCoverView.xaml
+++ b/UniFiler10/Views/BriefcaseCoverView.xaml
@@ -105,7 +105,7 @@
 							<ColumnDefinition Width="{StaticResource LandscapeItemWidth_ForGrid}"/>
 						</Grid.ColumnDefinitions>
 
-						<SymbolIcon Symbol="OpenLocal"
+						<SymbolIcon Symbol="Import"
 							HorizontalAlignment="Center"
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
